--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.8.9/Tone.js"></script>
+    <audio id="a1" src="audio/a1.wav"></audio>
+    <audio id="a2" src="audio/a2.wav"></audio>
+    <audio id="a3" src="audio/a3.wav"></audio>
+    <audio id="a4" src="audio/a4.wav"></audio>
+    <audio id="a5" src="audio/a5.wav"></audio>
+    <audio id="a6" src="audio/a6.wav"></audio>
+    <audio id="a7" src="audio/a7.wav"></audio>
+    <audio id="a8" src="audio/a8.wav"></audio>
+    <audio id="a9" src="audio/a9.wav"></audio>
+    <audio id="a10" src="audio/a10.wav"></audio>
+    <audio id="a11" src="audio/a11.wav"></audio>
+    <audio id="a12" src="audio/a12.wav"></audio>
+    <audio id="a13" src="audio/a13.wav"></audio>
+    <audio id="a14" src="audio/a14.wav"></audio>
     <script src="./main.js"></script>
   </body>
 </html>
